ДЛЯ КОГО Я ЭТО ПИШУ ЭТО ВСЕ РАВНО НИКТО НЕ ЧИТАЕТ...
